array.island.Island.scala.error
Compilation error:
Island:5: error: type mismatch;
 found   : Unit
 required: Int
  for (curseur <- num){
               ^